# algds2024

./: .gitignore
lab2/: README.md
lab2/source/: add_avl_tree.c  avl_tree.c  avl_tree.h  del_avl_tree.c  rotate.c  rotate.h
lab2/source/gtest/: CMakeLists.txt  add_to_avl_tree_test.cpp  del_from_avl_tree_test.cpp  lab2_test  utility.cpp  utility.hpp
summer_practice/: CMakeLists.txt  README.md
summer_practice/source/: FibonacciHeap.cpp  FibonacciHeap.hpp  FibonacciTree.cpp  FibonacciTree.hpp  main.cpp
